sumo/tests/duarouter/alternatives/style2_input/errors/route/route_prob_missing/errors.duarouter
Error: Attribute 'probability' is missing in definition of route '!1'.
Quitting (on error).
